# T-rabajo

./: coordinates.json  main.py  pyproject.toml
plotters/: plot_SDWI.py  plot_comparison.py  plot_evolution.py  plot_false_color.py  plot_heatmap.py  plot_histograms.py  plot_log_comparison.py  plot_sdwi_segmentated.py  plot_video.py
utils/: denoisers.py  enlargers.py  img_utils.py
